# performance-test

./: .gitignore  Dockerfile  LICENSE.md  README.md  performance.md
.circleci/: config.yml
.github/workflows/: ccpp.yml
docker/: Dockerfile
docs/: data.txt  index.html  index.md
gpu/: CMakeLists.txt  README.md  main.cpp  poisson.py
gpu/src/: csr.hpp  laplacian.hpp  mesh.hpp  util.hpp  vector.hpp
python/: dolfinx_scaling_test.py  main.py  mesh.py
src/: .gitignore  CMakeLists.txt  CatalystAdaptor.h  Elasticity.py  Elasticity.ufl  Elasticity2.ufl  Poisson.py  Poisson.ufl  Poisson3.ufl  catalyst_pipeline.py  cg.h  cgpoisson_problem.cpp  cgpoisson_problem.h  crescendo_elasticity_problem.cpp  crescendo_elasticity_problem.h  cuda_allocator.h  elasticity_problem.cpp  elasticity_problem.h  elasticity_problem_trilinos.cpp  elasticity_problem_trilinos.h  env.sh  main.cpp  mem.cpp  mem.h  mesh.cpp  mesh.h  poisson_problem.cpp  poisson_problem.h  poisson_problem_trilinos.cpp  poisson_problem_trilinos.h  predict-mesh.py
src/.circleci/: config.yml
src/catalyst-pybind11/: CMakeLists.txt  CatalystAdaptor-pybind.cpp
src/cmake/: FindAmgX.cmake  FindAmgXWrapper.cmake
src/solvers/: cg.h  poisson.cu  poisson.hpp  scatter.cu  scatter.hpp
